--- a/css/main.css
+++ b/css/main.css
@@ -8,35 +8,46 @@ font family --> sans-serif
 body {
   font-family: sans-serif;
 }
+
+#title {
+  text-decoration: underline;
+  text-align: center;
+}
+
 nav {
   /*outline: 2px solid pink;*/
   height: 336px;
   width: 610px;
 }
+
 h1 {
   font-size: 40px;
 }
-ul {
 
+ul {
   list-style: none;
   left: auto;
   line-height: 67px;
   margin: 0px;
   padding: 0px;
-  /*outline: 2px solid blue;*/
 }
+
+.item {
+  border: 1px dotted #999;
+}
+
 li {
-  /*outline: 2px solid green;*/
   background: #f5f5f0;
 }
+
 a {
-  /*outline: 2px solid red;*/
   display: block;
   color: black;
   text-decoration: none;
   padding-left: 22px;
   font-size: 20px;
 }
+
 a:hover {
   /*width: 20px;
     height: 20px;
@@ -46,19 +57,24 @@ a:hover {
     background: #5cb85c;*/
   background: #e0e0d1;
 }
+
 a:active {
   background: #333;
   color: white;
 }
+
 ul li:first-child {
   background: #f9a91a;
 }
+
 ul li:first-child a {
   color: white;
 }
+
 ul li:first-child a:hover {
   color: black;
 }
+
 ul li:first-child a:active {
   color: white;
 }
